--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- 开发环境版本，包含了有帮助的命令行警告 -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <title>sell</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app1">
+      {{ a }}
+    </div>
     <!-- built files will be auto injected -->
+
+    <script type="text/javascript">
+      var data = { a : 1 };
+      var vm = new Vue({
+          el : '#app1',
+          data : data
+      });
+
+      data.a = 'hi. . .. new value. ...';
+    </script>
   </body>
 </html>
