--- a/index.html
+++ b/index.html
@@ -12,22 +12,38 @@
       {{ a }}
     </div> -->
 
-    <div id="app-5">
-      <p>{{ message }}</p>
-      <button v-on:click="reverseMessage">反转消息</button>
+    <div id="app-7">
+      <ol>
+        <!-- 
+          现在我们为每个 todo-item 提供 todo 对象
+          todo 对象是变量，即其内容可以是动态的。
+          我们也需要为每个组件提供一个“key”，稍后再
+          作详细解释。
+         -->
+        <todo-item 
+          v-for="item in groceryList"
+          v-bind:todo="item"
+          v-bind:key="item.id"
+        ></todo-item>
+      </ol>
     </div>
     <!-- built files will be auto injected -->
 
     <script type="text/javascript">
-      var app5 = new Vue({
-        el: '#app-5',
+      // todo-item 组件现在接受一个 ‘prop’ 类似于一个自定义特性
+      Vue.component('todo-item', {
+        props: ['todo'],
+        template: '<li>{{ todo.text }}</li>'
+      });
+
+      var app7 = new Vue({
+        el: '#app-7',
         data: {
-          message: 'Hello Vue.js!'
-        },
-        methods: {
-          reverseMessage: function () {
-            this.message = this.message.split('').reverse().join('--')
-          }
+          groceryList: [
+            {id: 0, text: '蔬菜'},
+            {id: 1, text: '奶酪'},
+            {id: 2, text: '随便其它人吃的东西'}
+          ]
         }
       });
     </script>
