--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
       {{ a }}
     </div> -->
 
-    <div id="app-7-2">
-      <button-counter title="title1 : " @clicknow="clicknow">
-        <h2>hi....h2</h2>
-      </button-counter>
-      <button-counter></button-counter>
+    <div id="app8">
+      {{ a }}
     </div>
+
+    <p v-if="0">现在你看到我了</p>
     <!-- built files will be auto injected -->
 
     <script type="text/javascript">
@@ -38,14 +37,14 @@
         }
       });
 
-      var app72 = new Vue({
-        el: '#app-7-2',
+      var app8 = new Vue({
+        el: '#app8',
         data: {
+          a: 1
         },
-        methods: {
-          clicknow: function (e) {
-            console.log(e);
-          }
+        created: function () {
+          // 'this' 指向 vm 示例
+          console.log('a is ' + this.a);
         }
       });
     </script>
