计算属性基础例子
这里我们声明了一个计算属性 reversedMessage。我们提供的函数将用作属性 vm.reversedMessage 的 getter 函数：

console.log(vm.reversedMessage) // => 'olleH'
vm.message = 'Goodbye'
console.log(vm.reversedMessage) // => 'eybdooG'
你可以打开浏览器的控制台，自行修改例子中的 vm。vm.reversedMessage 的值始终取决于 vm.message 的值。

你可以像绑定普通属性一样在模板中绑定计算属性。Vue 知道 vm.reversedMessage 依赖于 vm.message，因此当 vm.message 发生改变时，所有依赖 vm.reversedMessage 的绑定也会更新。而且最妙的是我们已经以声明的方式创建了这种依赖关系：计算属性的 getter 函数是没有副作用 (side effect) 的，这使它更易于测试和理解。

--- a/index.html
+++ b/index.html
@@ -12,39 +12,25 @@
       {{ a }}
     </div> -->
 
-    <div id="app8">
-      {{ a }}
+    <div id="example">
+      <p>Original message: "{{ message }}"</p>
+      <p>Computed reversed message: "{{ reversedMessage }}"</p>
     </div>
 
     <p v-if="0">现在你看到我了</p>
     <!-- built files will be auto injected -->
 
     <script type="text/javascript">
-      // todo-item 组件现在接受一个 ‘prop’ 类似于一个自定义特性
-      Vue.component('button-counter', {
-        props: ['title'],
-        data: function () {
-          return {
-            count: 0
-          }
-        },
-        template: '<div><h1>hi...</h1><button v-on:click="clickfun">{{ title }}You clicked me {{ count }} times.</button><slot></slot></div>',
-        methods: {
-          clickfun: function () {
-            this.count ++;
-            this.$emit('clicknow', this.count);
-          }
-        }
-      });
-
-      var app8 = new Vue({
-        el: '#app8',
+      var vm = new Vue({
+        el: '#example',
         data: {
-          a: 1
+          message: 'Hello'
         },
-        created: function () {
-          // 'this' 指向 vm 示例
-          console.log('a is ' + this.a);
+        computed: {
+          // 计算属性得 getter
+          reversedMessage: function () {
+            return this.message.split('').reverse().join('')
+          }
         }
       });
     </script>
