--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
         // },
         // 计算属性方式
         computed: {
-          fullName: function () {
-            return this.firstName + ' ' + this.lastName
+          fullName: {
+            // getter
+            get: function () {
+              return this.firstName + ' ' + this.lastName
+            },
+            // setter
+            set: function (newValue) {
+              var names = newValue.split(' ')
+              this.firstName = names[0]
+              this.lastName = names[names.length - 1]
+            }
           }
         }
       });
