--- a/day2/02.品牌列表案例.html
+++ b/day2/02.品牌列表案例.html
@@ -43,7 +43,7 @@
 
                     <label>
                         搜索筛选:
-                        <input type="text" class="form-control" v-model="keywords" v-focus>
+                        <input type="text" class="form-control" v-model="keywords" v-focus v-color>
                     </label>
                 </div>
             </div>
@@ -69,7 +69,7 @@
         </div>
 
         <div id="app2">
-            {{ dt | dateFormat('pattern') }}
+            <p v-fontweight="900">{{ dt | dateFormat('pattern') }}</p>
         </div>
         
         <script>
@@ -188,6 +188,17 @@
                             return `${y}-${m}-${d} ${hh}:${mm}:${ss}` + '~~~~~~~~~~'
                         }
                     }
+                },
+                directives:  { // 自定义私有指令
+                    'fontweight': {
+                        bind: function (el, binding) {
+                            el.style.fontWeight = binding.value
+                        },
+                        // 指令的定义
+                        inserted: function (el) {
+                            el.style.color = 'red';
+                        }
+                    }
                 }
             });
             // 过滤器定义语法
@@ -208,11 +219,19 @@
                     // el.focus()
                 },
                 inserted: function (el) { // inserted 表示元素 插入到 DOM 中的时候，会执行 inserted 函数 【出发一次】
-                    el.focus()
+                    alert(123);
+                    el.focus();
                 },
-                updated: function () { // 当 VNode 更新的时候，会执行 updated，可能会触发多次
+                update: function () { // 当 VNode 更新的时候，会执行 updated，可能会触发多次
 
                 },
+            });
+
+            // 自定义 一个 设置字体颜色的 指令
+            Vue.directive('color', {
+                bind: function (el) {
+                    el.style.color = 'red'
+                }
             });
         </script>
     </body>
