--- a/day4/07.路由-路由的基本使用.html
+++ b/day4/07.路由-路由的基本使用.html
@@ -45,6 +45,9 @@
                 // 属性 1 是 path，表示监听 哪个路由链接地址
                 // 属性 2 是 component，表示，若路由匹配到 path，则展示 component 属性对应的那个组件
                 // ！！！注意： component 的属性值，必须是一个 组件的模板对象，不能是组件的引用名称.
+                // { path: '/', component: login },
+
+                { path: '/', redirect: '/login' }, // 这里的 redirect 和 Node 中的 redirect 完全是两码事
                 { path: '/login', component: login },
                 { path: '/register', component: register }
             ]
