--- a/day4/07.路由-路由的基本使用.html
+++ b/day4/07.路由-路由的基本使用.html
@@ -9,6 +9,17 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <!-- 1. 安装 vue-router 路由模块 -->
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+
+    <style>
+        /* vue-router 默认 .router-link-active */
+        .router-link-active3,.myactive {
+            color:darkblue;
+            font-weight: italic;
+            font-size: 30px;
+            text-decoration: underline;
+            background-color: blueviolet;
+        }
+    </style>
 </head>
 
 <body>
@@ -50,7 +61,8 @@
                 { path: '/', redirect: '/login' }, // 这里的 redirect 和 Node 中的 redirect 完全是两码事
                 { path: '/login', component: login },
                 { path: '/register', component: register }
-            ]
+            ],
+            linkActiveClass: 'myactive'
         });
 
      //创建Vue实例,得到 ViewModel
